Updated database: New table for translations

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -29,10 +29,6 @@
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="/home">... </a>
-				</li>
-
-				<li class="nav-item">
 					<a class="nav-link" href="/publications">Publications</a>
 				</li>
 
@@ -41,7 +37,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="/home">For students </a>
+					<a class="nav-link" href="/students">For students </a>
 				</li>
 
 				<li class="nav-item">
@@ -105,9 +101,9 @@
 						<img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
 						<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
 							<div class="d-flex justify-content-between align-items-center w-100">
-								<strong class="text-gray-dark">Full Name</strong>
+								<strong class="text-gray-dark">Albert Szadziński</strong>
 							</div>
-							<span class="d-block">username@email.com</span>
+							<span class="d-block">albert.szadzinski@us.edu.pl</span>
 						</div>
 					</div>
 				</div>
