--- a/App/templates/world/home.html
+++ b/App/templates/world/home.html
@@ -2,29 +2,19 @@
 {% block body %}
  <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8 blog-main">
-          <h3 class="pb-3 mb-4 font-italic border-bottom">
-            News 
-          </h3>
+        <div class=" blog-main">
+          <h2 class="font-italic border-bottom">
+            {{lang["ihstud"]}} 
+          </h2><br>
 {% for post in posts %}
           <div class="blog-post">
-            <h2 class="blog-post-title">{{post.head}}</h2>
-            <p class="blog-post-meta">{{post.timestamp}} by <a href="#">Admin</a></p>
+            <h3 class="blog-post-title">{{post.head}}</h3>
+            
 {{post.body}}
           </div><hr>
+          <small><p class="blog-post-meta">Added: {{post.timestamp.strftime("%d-%m-%Y  %H:%M") }}</p></small>
 {% endfor %}
-          <div class="blog-post">
-            <h2 class="blog-post-title">Hello World</h2>
-            <p class="blog-post-meta">December 10, 2019 by <a href="#">Admin</a></p>
-
-            
-             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. </p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra.</p>
-          </div><!-- /.blog-post -->
+          
 
           <nav class="blog-pagination">
             <a class="btn btn-outline-primary" href="#">Older</a>
@@ -33,32 +23,7 @@
 
         </div><!-- /.blog-main -->
 
-        <aside class="col-md-4 blog-sidebar">
-          <div class="p-3 mb-3 bg-light rounded">
-            <h4 class="font-italic">About</h4>
-            <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-          </div>
-
-          <div class="p-3">
-            <h4 class="font-italic">Archives</h4>
-            <ol class="list-unstyled mb-0">
-              <li><a href="#">March 2014</a></li>
-              <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-            </ol>
-          </div>
-
-          <div class="p-3">
-            <h4 class="font-italic">Links</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">CCB</a></li>
-              <li><a href="#">IFJ</a></li>
-              <li><a href="#">UŚ</a></li>
-            </ol>
-          </div>
-        </aside><!-- /.blog-sidebar -->
+        
 
       </div><!-- /.row -->
 
