--- a/App/templates/world/publications.html
+++ b/App/templates/world/publications.html
@@ -6,10 +6,10 @@
 			<table class="table table-striped table-sm">
 				<thead>
 					<tr>
-						<th>Year</th>
-						<th>Title</th>
-						<th>Author</th>
-						<th>Download</th>
+						<th>{{ lang["icpub-year"] }}</th>
+						<th>{{ lang["icpub-title"] }}</th>
+						<th>{{ lang["icpub-author"] }}</th>
+						<th>{{ lang["icpub-download"] }}</th>
 					</tr>
 				</thead>
 				<tbody>
