--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -39,7 +39,7 @@
 							 <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-pencil-square-o"></i> <span class="d-none d-md-inline">Edit</span></a>
 							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
 								<li class="nav-item">
-									<a class="dropdown-item" href="/dashboard/edit/home"><i class="fa fa-home"></i> <span class="d-md-inline">Home</span></a>
+									<a class="dropdown-item" href="/dashboard/edit/home"><i class="fa fa-home"></i> <span class="d-md-inline">For students</span></a>
 								</li>
 								<li class="nav-item">
 									<a class="dropdown-item" href="/dashboard/edit/experiment"><i class="fa fa-laptop"></i> <span class=" d-md-inline">Experiments</span></a>
