--- a/App/templates/dashboard/files/presentations.html
+++ b/App/templates/dashboard/files/presentations.html
@@ -46,7 +46,7 @@
 								<div class="col">
 									<a class="nav-link active text-dark " href="/dashboard/presentations/download/{{content.id}}">
 										<i class="fa fa-file-pdf-o" style="font-size:30px;color:red"></i>
-										<b><small>{{ content.author }}: </small>{{ content.title }}</b> <hr>
+										<b><small>{{ content.author }}: </small>{{ content.title }}</b> 
 										<p><small>{{ content.desc }}</small></p>
 									</a>
 									<hr>
@@ -116,7 +116,7 @@
 					</div>
 					<div class="form-group">
 						<label>Description</label>
-						<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="presentation name" name="desc">
+						<input type="text" class="form-control is-valid form-control-sm" id="validationServer01" placeholder="optional" name="desc">
 					</div>
 					<hr>
 					<button type="submit" class="btn btn-primary">Add</button>
