--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -12,7 +12,7 @@
 						<img class="first-slide" src="{{imagee[0]}}" class="d-block w-100" alt="First slide" style="object-fit: cover ;width: 100%; height: 300px;">
 						<div class="container">
 							<div class="carousel-caption text-center">
-								<button type="button" class="btn btn-success" data-toggle="modal" data-target="#gallery">Gallery</button>
+								<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#gallery">{{ lang["gallery"] }}</button>
 							</div>
 						</div>
 					</div>
@@ -26,7 +26,7 @@
 		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Gallery</h5>
+					<h5 class="modal-title" id="exampleModalLabel">{{ lang["gallery"] }}</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -35,15 +35,22 @@
 
 					<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
 						<div class="carousel-inner">
-							
+							<div class="carousel-item active">
+								<img class="d-block w-100" src="{{url_for('static', filename=collection[1].path)}}" alt="Photo 1">
+							</div>
+							{% for photo in collection %}
+							<div class="carousel-item">
+								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}" style="object-fit: cover ;width: 100%; height: 600px;">
+							</div>
+							{% endfor %}
 						</div>
 						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
 							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
+							<span class="sr-only">{{ lang["prev"] }}</span>
 						</a>
 						<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
 							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
+							<span class="sr-only">{{ lang["next"] }}</span>
 						</a>
 					</div>
 
@@ -61,146 +68,41 @@
 						<img class="rounded-circle" src="{{imagee[6]}}" alt="Generic placeholder image" width="140" height="140">
 						<h2>Research</h2>
 						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[7]}}" alt="Generic placeholder image" width="140" height="140">
 						<h2>BINA detector</h2>
 						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
 					</div><!-- /.col-lg-4 -->
 					<div class="col-lg-4">
 						<img class="rounded-circle" src="{{imagee[9]}}" alt="Generic placeholder image" width="140" height="140">
 						<h2>Experiments</h2>
 						<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-						<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
 					</div><!-- /.col-lg-4 -->
 				</div><!-- /.row -->
 
+
+{% for post in lang["icexp"] %}
 				<hr class="featurette-divider">
+				
 				<div class="row featurette">
 					<div class="col-md-7">
-						<h2 class="featurette-heading">Purpose of research <span class="text-muted"> </span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						{{ post.body|safe }}
 					</div>
 					<div class="col-md-5">
 						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
 					</div>
 				</div>
+				
 
-				<hr class="featurette-divider">
-
-				<div class="row featurette">
-					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">Nuclear interactions <span class="text-muted"></span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-<h3>3NF etc...</h3>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5 order-md-1">
-						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-				<div class="row featurette">
-					<div class="col-md-7">
-						<h2 class="featurette-heading">BINA detector <span class="text-muted">(Big Instrument for Nuclear-polarization Analysis)</span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5">
-						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-
-				<div class="row featurette">
-					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">Target and beam <span class="text-muted"></span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5 order-md-1">
-						<img src="{{imagee[6]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-				<div class="row featurette">
-					<div class="col-md-7">
-						<h2 class="featurette-heading">Backward Ball <span class="text-muted"></span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5">
-						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-
-
-				<div class="row featurette">
-					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">MWPC <span class="text-muted"></span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5 order-md-1">
-						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-
-				<div class="row featurette">
-					<div class="col-md-7">
-						<h2 class="featurette-heading">Forward Wall <span class="text-muted"> (E and ΔE) </span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5">
-						<img src="{{imagee[2]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-
-				<hr class="featurette-divider">
-				<div class="row featurette">
-					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">Recent experiments <span class="text-muted"></span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5 order-md-1">
-						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-
-				<div class="row featurette">
-					<div class="col-md-7">
-						<h2 class="featurette-heading">2019 <span class="text-muted"> CCB </span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5">
-						<img src="{{imagee[2]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-				<div class="row featurette">
-					<div class="col-md-7 order-md-2">
-						<h2 class="featurette-heading">2016 <span class="text-muted"> CCB</span></h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5 order-md-1">
-						<img src="{{imagee[8]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
-				<hr class="featurette-divider">
+{% endfor %}
 			</div><!-- /.container -->
 			
 			<footer class="container" style="margin-bottom:10px">
-						<p class="float-right"> <a href="#">Back to top</a></p>
+						<p class="float-right"> <a href="#">{{ lang["up"] }}</a></p>
 			</footer>
 		</div>
 	</div>
