--- a/App/templates/world/members.html
+++ b/App/templates/world/members.html
@@ -12,7 +12,7 @@
 				<div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
 					<div class="d-flex justify-content-between align-items-center w-100">
 						<strong class="text-gray-dark">{{member.name}} {{member.surname}}</strong>
-						<a href="#">Follow</a>
+						<!--<a href="#">Follow</a>-->
 					</div>
 					<span class="d-block">{{member.email}}</span>
 				</div>
