Updated: gallery view, experiment page

--- a/App/templates/dashboard/files.html
+++ b/App/templates/dashboard/files.html
@@ -22,6 +22,7 @@
 			<li class="nav-item dropdown">
 				<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Presentations</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="/dashboard/presentations/collaboration">Collaboration meetings</a>
 					<a class="dropdown-item" href="/dashboard/presentations/meetings">Meetings</a>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="/dashboard/presentations/conferences">Conferences</a>
