--- a/App/templates/dashboard/files/photos.html
+++ b/App/templates/dashboard/files/photos.html
@@ -28,6 +28,38 @@
 		</div>
 	</div>
 	<div class="col-sm-6">
+		<div class="card">
+			<img class="card-img-top" src="{{url_for('static', filename='img/target.jpg')}}" alt="Generic placeholder image" width="140" height="140">
+			<div class="card-body">
+				<h5 class="card-title"><a  href="/dashboard/gallery/target">Target</a></h5>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-6">
+		<div class="card">
+			<img class="card-img-top" src="{{url_for('static', filename='img/production.jpg')}}" alt="Generic placeholder image" width="140" height="140">
+			<div class="card-body">
+				<h5 class="card-title"><a  href="/dashboard/gallery/production">Production</a></h5>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-6">
+		<div class="card">
+			<img class="card-img-top" src="{{url_for('static', filename='img/chamber.jpg')}}" alt="Generic placeholder image" width="140" height="140">
+			<div class="card-body">
+				<h5 class="card-title"><a  href="/dashboard/gallery/targetchamber">Target-chamber</a></h5>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-6">
+		<div class="card">
+			<img class="card-img-top" src="{{url_for('static', filename='img/plans.jpg')}}" alt="Generic placeholder image" width="140" height="140">
+			<div class="card-body">
+				<h5 class="card-title"><a  href="/dashboard/gallery/plans">Plans</a></h5>
+			</div>
+		</div>
+	</div>
+	<div class="col-sm-6">
 		<div class="card" >
 			<img class="card-img-top" src="{{url_for('static', filename='img/other.jpg')}}" alt="Generic placeholder image" width="140" height="140">
 			<div class="card-body">
@@ -36,5 +68,6 @@
 			</div>
 		</div>
 	</div>
+	
 </div>
 {% endblock %}
