--- a/App/templates/dashboard/files/gallery.html
+++ b/App/templates/dashboard/files/gallery.html
@@ -15,7 +15,7 @@
       <th scope="row">{{group.id}}</th>
       <td>{{group.filename}}</td>
       <td><a role="button" class="btn btn-outline-success" href="/dashboard/gallery/download/{{folder}}/{{group.id}}">Show</a></td>
-      <th ><img  src="{{url_for('static', filename=group.path)}}"  style=" width: 90px; height: 60px;"></th>
+      <th ><img  class="img-thumbnail" src="{{url_for('static', filename=group.path)}}"  style=" width: 120px; height: 80px;"></th>
     </tr>
 {% endfor %}
   </tbody>
