--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 {% block body %}
-<div class="container" >
+<div class="container" style="margin-top:1px">
 	<div class="row">
 		<div class="col" style="margin-bottom:10px">
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -40,7 +40,7 @@
 							</div>
 							{% for photo in collection %}
 							<div class="carousel-item">
-								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}" style="object-fit: cover ;width: 100%; height: 600px;">
+								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}" style="object-fit: cover ;width: 100%; height: 900px;">
 							</div>
 							{% endfor %}
 						</div>
@@ -88,16 +88,9 @@
 {% for post in lang["icexp"] %}
 				<hr class="featurette-divider">
 				
-				<div class="row featurette">
-					<div class="col-md-7">
 						{{ post.body|safe }}
-					</div>
-					<div class="col-md-5">
-						<img src="{{imagee[5]}}" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure." width="400" height="400">
-					</div>
-				</div>
+						{}
 				
-
 {% endfor %}
 			</div><!-- /.container -->
 			
