--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -15,7 +15,9 @@
 	<script type="text/javascript">
 	LatexIT.add('p',true);
 	</script>
-	
+
+    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/x3dom/release/x3dom.css'></link>
+    <script type='text/javascript' src='http://www.x3dom.org/x3dom/release/x3dom.js'></script>
 
 	<title>BINA</title>
 </head>
