--- a/App/templates/bina.html
+++ b/App/templates/bina.html
@@ -1,27 +1,12 @@
-{% extends "index.html" %}
-{% block body %}
-<div class="container" style="margin-top:1px">
-	<div class="row">
-		<div class="col" style="margin-bottom:10px">
-			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				</ol>
-				<div class="carousel-inner" >
-					<div class="carousel-item active">
-						<img class="first-slide" src="{{imagee[0]}}" class="d-block w-100" alt="First slide" style="object-fit: cover ;width: 100%; height: 300px;">
-						<div class="container">
-							<div class="carousel-caption text-center">
-								<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#gallery">{{ lang["gallery"] }}</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-<h3>3D model TEST</h3>
- <x3d id='someUniqueId' showStat='false' showLog='false' x='0px' y='0px' width='400px' height='400px'>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
+    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/x3dom/release/x3dom.css'></link>
+    <script type='text/javascript' src='http://www.x3dom.org/x3dom/release/x3dom.js'></script>
+  </head>
+  <body>
+    <x3d id='someUniqueId' showStat='false' showLog='false' x='0px' y='0px' width='400px' height='400px'>
       <scene DEF='scene'>
         <viewpoint position='0 0 4797.3'></viewpoint>
         <shape>
@@ -32,10 +17,10 @@
             <coordinate point='-1499.99 -1499.99 -1499.99 1499.99 -1499.99 -1499.99 1499.99 1499.99 -1499.99 -1499.99 1499.99 -1499.99 -1499.99 -1499.99 247.98 1499.99 -1499.99 247.98 1499.99 1499.99 247.98 -1499.99 1499.99 247.98'></coordinate>
           </indexedFaceSet>
         </shape>
-          </appearance>
         <shape>
           <appearance>
-            <material diffuseColor='1 1 1' transparency='0.7'></material
+            <material diffuseColor='1 1 1' transparency='0.7'></material>
+          </appearance>
           <indexedFaceSet solid='false' coordIndex='0 24 25 1 -1 1 25 26 2 -1 2 26 27 3 -1 3 27 28 4 -1 4 28 29 5 -1 5 29 30 6 -1 6 30 31 7 -1 7 31 32 8 -1 8 32 33 9 -1 9 33 34 10 -1 10 34 35 11 -1 11 35 36 12 -1 12 36 37 13 -1 13 37 38 14 -1 14 38 39 15 -1 15 39 40 16 -1 16 40 41 17 -1 17 41 42 18 -1 18 42 43 19 -1 19 43 44 20 -1 20 44 45 21 -1 21 45 46 22 -1 22 46 47 23 -1 23 47 24 0 -1 48 0 1 -1 48 1 2 -1 48 2 3 -1 48 3 4 -1 48 4 5 -1 48 5 6 -1 48 6 7 -1 48 7 8 -1 48 8 9 -1 48 9 10 -1 48 10 11 -1 48 11 12 -1 48 12 13 -1 48 13 14 -1 48 14 15 -1 48 15 16 -1 48 16 17 -1 48 17 18 -1 48 18 19 -1 48 19 20 -1 48 20 21 -1 48 21 22 -1 48 22 23 -1 48 23 0 -1 24 49 25 -1 25 49 26 -1 26 49 27 -1 27 49 28 -1 28 49 29 -1 29 49 30 -1 30 49 31 -1 31 49 32 -1 32 49 33 -1 33 49 34 -1 34 49 35 -1 35 49 36 -1 36 49 37 -1 37 49 38 -1 38 49 39 -1 39 49 40 -1 40 49 41 -1 41 49 42 -1 42 49 43 -1 43 49 44 -1 44 49 45 -1 45 49 46 -1 46 49 47 -1 47 49 24 -1'>
             <coordinate point='30 0 3 28.9778 7.76457 3 25.9808 15 3 21.2132 21.2132 3 15 25.9808 3 7.76457 28.9778 3 1.83697e-15 30 3 -7.76457 28.9778 3 -15 25.9808 3 -21.2132 21.2132 3 -25.9808 15 3 -28.9778 7.76457 3 -30 3.67394e-15 3 -28.9778 -7.76457 3 -25.9808 -15 3 -21.2132 -21.2132 3 -15 -25.9808 3 -7.76457 -28.9778 3 -5.51091e-15 -30 3 7.76457 -28.9778 3 15 -25.9808 3 21.2132 -21.2132 3 25.9808 -15 3 28.9778 -7.76457 3 30 0 -3 28.9778 7.76457 -3 25.9808 15 -3 21.2132 21.2132 -3 15 25.9808 -3 7.76457 28.9778 -3 1.83697e-15 30 -3 -7.76457 28.9778 -3 -15 25.9808 -3 -21.2132 21.2132 -3 -25.9808 15 -3 -28.9778 7.76457 -3 -30 3.67394e-15 -3 -28.9778 -7.76457 -3 -25.9808 -15 -3 -21.2132 -21.2132 -3 -15 -25.9808 -3 -7.76457 -28.9778 -3 -5.51091e-15 -30 -3 7.76457 -28.9778 -3 15 -25.9808 -3 21.2132 -21.2132 -3 25.9808 -15 -3 28.9778 -7.76457 -3 0 0 3 0 0 -3'></coordinate>
           </indexedFaceSet>
@@ -2865,87 +2850,6 @@
           </indexedFaceSet>
         </shape>
       </scene>
-</x3d>
-
-	<div class="modal fade" id="gallery" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">{{ lang["gallery"] }}</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-
-					<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img class="d-block w-100" src="{{url_for('static', filename=collection[1].path)}}" alt="Photo 1">
-							</div>
-							{% for photo in collection %}
-							<div class="carousel-item">
-								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}" style="object-fit: cover ;width: 100%; height: 900px;">
-							</div>
-							{% endfor %}
-						</div>
-						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">{{ lang["prev"] }}</span>
-						</a>
-						<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">{{ lang["next"] }}</span>
-						</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="row">
-		<div class="col">
-			<div class="container marketing">
-				<div class="row">
-					<div class="col-lg-4">
-						<img class="rounded-circle" src="{{imagee[6]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>Research</h2>
-						<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
-					</div><!-- /.col-lg-4 -->
-					<div class="col-lg-4">
-						<img class="rounded-circle" src="{{imagee[7]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>BINA detector</h2>
-						<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
-					</div><!-- /.col-lg-4 -->
-					<div class="col-lg-4">
-						<img class="rounded-circle" src="{{imagee[9]}}" alt="Generic placeholder image" width="140" height="140">
-						<h2>Experiments</h2>
-						<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-						<p><a class="btn btn-secondary" href="#" role="button">{{ lang["viewd"] }}</a></p>
-					</div><!-- /.col-lg-4 -->
-				</div><!-- /.row -->
-
-
-
-
-
-{% for post in lang["icexp"] %}
-				<hr class="featurette-divider">
-				
-						{{ post.body|safe }}
-						{}
-				
-{% endfor %}
-			</div><!-- /.container -->
-			
-			<footer class="container" style="margin-bottom:10px">
-						<p class="float-right"> <a href="#">{{ lang["up"] }}</a></p>
-			</footer>
-		</div>
-	</div>
-</div>
-{% endblock %}
+    </x3d>
+  </body>
+</html>
