Updated: dashboard menu: BETA section

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -49,20 +49,26 @@
 								</li>
 							</div>
 						</div>
+
 						<li class="nav-item">
 							<a class="nav-link pl-0 disabled" href="/dashboard/notes"><span class="d-none d-md-inline"><hr><small>Data</small> </span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link pl-0" href="/dashboard/papers/publications"><i class="fa fa-folder"></i> <span class="d-none d-md-inline">Files</span></a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/calendar"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Calendar</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link pl-0" href="/dashboard/notes"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
-						</li>
-						
 
+						
+						<div class="dropdown ">
+							 <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-puzzle-piece"></i> <span class="d-none d-md-inline">BETA</span></a>
+							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/edit/experiment"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Calendar</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/edit/members"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
+								</li>
+							</div>
+						</div>
 
                     </ul>
                 </div>
