--- a/App/templates/world/experiments.html
+++ b/App/templates/world/experiments.html
@@ -13,6 +13,7 @@
 						<div class="container">
 							<div class="carousel-caption text-center">
 								<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#gallery">{{ lang["gallery"] }}</button>
+								<button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#model">{{ lang["3d"] }}</button>
 							</div>
 						</div>
 					</div>
@@ -20,7 +21,58 @@
 			</div>
 		</div>
 	</div>
-<h3>3D model TEST</h3>
+
+
+	<div class="modal fade" id="gallery" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">{{ lang["gallery"] }}</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+
+					<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100" src="{{url_for('static', filename=collection[1].path)}}" alt="Photo 1">
+							</div>
+							{% for photo in collection %}
+							<div class="carousel-item">
+								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}" style="object-fit: cover ;width: 100%; height: 900px;">
+							</div>
+							{% endfor %}
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">{{ lang["prev"] }}</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">{{ lang["next"] }}</span>
+						</a>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="model" tabindex="-1" role="dialog" aria-labelledby="modelq" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered " role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="model">{{ lang["3d"] }}</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+
+
+
     <x3d id='someUniqueId' showStat='false' showLog='false' x='0px' y='0px' width='400px' height='400px'>
       <scene DEF='scene'>
         <viewpoint position='0 0 4797.3'></viewpoint>
@@ -3147,44 +3199,17 @@
       </scene>
     </x3d>
 
-
-	<div class="modal fade" id="gallery" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">{{ lang["gallery"] }}</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-
-					<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img class="d-block w-100" src="{{url_for('static', filename=collection[1].path)}}" alt="Photo 1">
-							</div>
-							{% for photo in collection %}
-							<div class="carousel-item">
-								<img class="d-block w-100" src="{{url_for('static', filename=photo.path)}}" alt="Photo {{photo.id}}" style="object-fit: cover ;width: 100%; height: 900px;">
-							</div>
-							{% endfor %}
-						</div>
-						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">{{ lang["prev"] }}</span>
-						</a>
-						<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">{{ lang["next"] }}</span>
-						</a>
-					</div>
-
+			<hr>
+			  <h5>Navigation</h5><smal>
+ 				 <p> 'r' or 'a': reset view </p>
+ 				 <p> 'e' or 'g':  interactive camera </p>
+ 				 <p>  'ctrl' + 'Right-click': changes perspective</p>
+ 				 <p> 'scroll': Zoom</p></small>
+			</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 
 	<div class="row">
 		<div class="col">
