--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -52,7 +52,7 @@
 					<a class="nav-link" href="#" data-toggle="modal" data-target="#ContactsModal">{{ lang["ihcon"] }}</a>
 				</li>
 				{% if admin %}
-				<li class="nav-item">
+				<li class="nav-item active">
 					<a class="nav-link" href="/dashboard/papers/publications">{{ lang["ihdash"] }}</a>
 				</li>
 				{% endif %}
