Added new option to dashboard: projects and git

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -62,10 +62,16 @@
 							 <a class="nav-link pl-0" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-puzzle-piece"></i> <span class="d-none d-md-inline">BETA</span></a>
 							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
 								<li class="nav-item">
-									<a class="dropdown-item" href="/dashboard/edit/experiment"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Calendar</span></a>
+									<a class="dropdown-item" href="/dashboard/calendar"><i class="fa fa-calendar"></i> <span class="d-none d-md-inline">Calendar</span></a>
 								</li>
 								<li class="nav-item">
-									<a class="dropdown-item" href="/dashboard/edit/members"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
+									<a class="dropdown-item" href="/dashboard/notes"><i class="fa fa-sticky-note"></i> <span class="d-none d-md-inline">Notes</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/kanban"><i class="fa fa-pie-chart"></i> <span class="d-none d-md-inline">Projects</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item" href="/dashboard/git"><i class="fa fa-code-fork"></i> <span class="d-none d-md-inline">Git</span></a>
 								</li>
 							</div>
 						</div>
